# CharlieChensTodo

./: .gitignore  CMakeLists.txt  README.md  init_session.cpp  main.cpp  resources.rc  todomainwindow.cpp  todomainwindow.h  todomainwindow.ui
MainPage/: CMakeLists.txt  defaultimagehandler.cpp  defaultimagehandler.h  floatinglabelhelper.cpp  floatinglabelhelper.h  mainpagewidget.cpp  mainpagewidget.h
MainPage/NasaAPOD/: NasaAPODData.h  nasaapod_error.hpp  nasaapodattrwidget.cpp  nasaapodattrwidget.h  nasaapodfetcher.cpp  nasaapodfetcher.h
MainPage/init/: apoddatadefault.cpp  apoddatadefault.h
TaskProcessing/: CMakeLists.txt  extractedprogresstreewidget.cpp  extractedprogresstreewidget.h  taskfieldsidewidget.cpp  taskfieldsidewidget.h  taskmonthysidewidget.cpp  taskmonthysidewidget.h  taskprocessingwidgets.cpp  taskprocessingwidgets.h  tasksidewidget.cpp  tasksidewidget.h
TaskProcessing/inits/: databasepreinit.cpp  databasepreinit.h  taskiniter.cpp  taskiniter.h
TaskProcessing/persistance/: databasepersistancetaskhelper.cpp  databasepersistancetaskhelper.h  persistancetaskhelper.cpp  persistancetaskhelper.h
TaskProcessing/task_recordings/: taskrecordings.cpp  taskrecordings.h  taskrecords.cpp  taskrecords.h  taskrecordshelpers.cpp  taskrecordshelpers.h
TaskProcessing/ui_event/: uieventhandler.cpp  uieventhandler.h
UiUtils/: CMakeLists.txt  UiUtils_Global.h
UiUtils/dialogs/: commons.cpp  commons.h  datedialog.cpp  datedialog.h  textselectordialog.cpp  textselectordialog.h  yearmonthdialog.cpp  yearmonthdialog.h
UiUtils/parser_adapter/: markdown_parser_privates.cpp  markdown_parser_privates.h  markdownparser.cpp  markdownparser.h
Utilities/: CMakeLists.txt  NetworkQueryHelper.hpp  Utilities_global.h  cached_policy_error.hpp  cached_proxy.hpp  netimagefetch.cpp  netimagefetch.h  url_reader.cpp  url_reader.h
cmake/: settings.cmake  third_party.cmake
init/: todoinititem.cpp  todoinititem.h  todopreinithelper.cpp  todopreinithelper.h
interfaces/: IPagedWidget.h
loggy/: loggerbackend.cpp  loggerbackend.h
loggy/uiwindow/: loggersubwindow.cpp  loggersubwindow.h  loggerwindowbackend.cpp  loggerwindowbackend.h
markdown_preview/: markdownpreviewwindow.cpp  markdownpreviewwindow.h
sources/: source.qrc
